summary: Mario's comments and present tense
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5206 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -12,7 +12,7 @@
 
 In this chapter we will discuss the elastic scattering of protons from a theoretical or phenomenological point of view. After defining our terminology on the kinematics and dynamics, we will review some of the most prominent models of $\rm pp$ and $\rm\bar pp$ elastic scattering (see \Sc{el models}). In \Sc{el pred} we will summarize the predictions of these models for two \abb{LHC}-relevant energies $\sqrt s = 7$ and $14\un{TeV}$. The last section of this chapter, \Sc{el coulomb} will be devoted to the interference between the Coulomb and hadronic interactions.
 
-Let us start by describing the kinematics of elastic scattering events. \Fg{el scat scheme} shows such an event viewed in the center-of-mass (\abb{CM}) frame (we will always use this frame, unless stated differently). The two incident protons (blue), each with mass $m$, momentum $p$ and energy $E$, approach each other other along the $z$ axis. After the collision, the scattered protons (red) keep the same energy $E$, but their directions are modified. They are described by the \em{scattering angle} $\th$ and \em{azimuthal angle} $\ph$, see \Fg{el scat scheme}.
+Let us start by describing the kinematics of elastic scattering events. \Fg{el scat scheme} shows such an event viewed in the center-of-mass (\abb{CM}) frame (we will always use this frame, unless stated differently). The two incident protons (blue), each with mass $m$, momentum $p$ and energy $E$, approach each other along the $z$ axis. After the collision, the scattered protons (red) keep the same energy $E$, but their directions are modified. They are described by the \em{scattering angle} $\th$ and \em{azimuthal angle} $\ph$, see \Fg{el scat scheme}.
 
 \fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematics of a $\rm pp$ scattering event in the \abb{CM} frame. The arrows represent the momenta of the incident (blue) and scattered (red) protons. The black dot in the origin marks the interaction.
 }
@@ -150,7 +150,7 @@ We will first review some of the most influential results (present them much as 
 
 \block{Electromagnetic scattering in QED}
 
-\abb{QED} is a \abb{QFT} model of the electromagnetic interaction. Moreover, it can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g.~Sec.~6.2 in \bref{peskin} or Sec.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g.~Sachs \bref{sachs62}). The leading contribution (one photon exchange, $\O{\al^2}$) to the cross-section has been calculated in \bref{block06} (Eq.~(29)). Since we are interested in the \abb{LHC} energies (few $\rm TeV$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
+\abb{QED} is a \abb{QFT} model of the electromagnetic interaction. Moreover, it can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g.~Sec.~6.2 in \bref{peskin} or Sec.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g.~Sachs \bref{sachs62}). The leading contribution (one photon exchange, $\O{\al^2}$) to the cross-section has been calculated in \bref{block06} (Eq.~(31)). Since we are interested in the \abb{LHC} energies (few $\rm TeV$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
 \eqref{{\d\si^{\rm EM}_{\rm QED, OPE}\over\d t} = {4\pi \al^2\over t^2} G_{\rm eff}^4(t)\ .}{el dsdt em}
 The symbol $G_{\rm eff}(t)$ represents an ``effective'' form factor that is a combination of the electric and magnetic form factors:
 \eqref{G^2_{\rm eff}(t) = {G_{\rm E}(t)^2 + \ta G_{\rm M}(t)^2 \over 1 + \ta},\qquad \ta = - {t\over 4m^2}\ .}{el ff eff}
@@ -195,7 +195,7 @@ The relation \Eq{el eik app F} may be regarded as one direction of the \em{eikon
 	F(t = -q^2) = s \int\limits_{0}^{\infty} b \d b\ J_0(bq)\ A(b)\ ,\qquad
 	A(b) = {1\over s} \int\limits_{0}^{\infty} q \d q\ J_0(bq)\ F(t = - q^2)\ ,
 }{el eik rep}
-where we have introduced the \em{impact-parameter amplitude} $A(b) = [\exp(2\i\de) - 1] / 2\i$.  The Fourier-Bessel transform is used to express the scattering amplitude $F(t)$ in the space of the impact parameter $b$ (see e.g.~\bref{adachi65} for details). Since the original relation \Eq{el eik app F} was derived under the high-energy approximation (where $t_{\rm min} \to -\infty$), it is not surprising that the second transform in \Eq{el eik rep} requires the knowledge of the amplitude $F(t)$ at all negative values of $t$. However, this is causes troubles if the representation is to be applied at a finite energy, where the amplitude $F(t)$ is defined only in the physical region $t > t_{\rm min}$ (see \Eq{el t min}). This difficulty may be overcome by following the prescription developed by Adachi et al. \bref{adachi65,adachi66,adachi66-2,adachi66-4,adachi66-5} and Islam \bref{islam67}. The suggestion is to extend the amplitude $F(t)$ by a specification in the non-physical region (function $\la$ in (III.4) in \bref{islam67}). Then, the impact-parameter amplitude $A(b)$ receives two contributions: from the physical and from the non-physical region (functions $a_1$ and $a_2$ in (III.8) in \bref{islam67}). This construction does not, however, imply how the amplitude $F(t)$ should be extended to the non-physical region. This brings in certain arbitrariness. For example, in the works of Adachi et al.~the amplitude is set to zero throughout the non-physical region. In \bref{islam75}, the author suggests to use Watson-Sommerfeld transform to continue the amplitude from the physical to the non-physical region. Yet another approach is chosen in Sec.~3 of \bref{kl03}: some requirements on the impact-parameter amplitude are raised following a statistical interpretation of the amplitude.
+where we have introduced the \em{impact-parameter amplitude} $A(b) = [\exp(2\i\de) - 1] / 2\i$.  The Fourier-Bessel transform is used to express the scattering amplitude $F(t)$ in the space of the impact parameter $b$ (see e.g.~\bref{adachi65} for details). Since the original relation \Eq{el eik app F} was derived under the high-energy approximation (where $t_{\rm min} \to -\infty$), it is not surprising that the second transform in \Eq{el eik rep} requires the knowledge of the amplitude $F(t)$ at all negative values of $t$. However, this causes troubles if the representation is to be applied at a finite energy, where the amplitude $F(t)$ is defined only in the physical region $t > t_{\rm min}$ (see \Eq{el t min}). This difficulty may be overcome by following the prescription developed by Adachi et al. \bref{adachi65,adachi66,adachi66-2,adachi66-4,adachi66-5} and Islam \bref{islam67}. The suggestion is to extend the amplitude $F(t)$ by a specification in the non-physical region (function $\la$ in (III.4) in \bref{islam67}). Then, the impact-parameter amplitude $A(b)$ receives two contributions: from the physical and from the non-physical region (functions $a_1$ and $a_2$ in (III.8) in \bref{islam67}). This construction does not, however, imply how the amplitude $F(t)$ should be extended to the non-physical region. This brings in certain arbitrariness. For example, in the works of Adachi et al.~the amplitude is set to zero throughout the non-physical region. In \bref{islam75}, the author suggests to use Watson-Sommerfeld transform to continue the amplitude from the physical to the non-physical region. Yet another approach is chosen in Sec.~3 of \bref{kl03}: some requirements on the impact-parameter amplitude are raised following a statistical interpretation of the amplitude.
 
 As much as the eikonal representation \Eq{el eik rep} can be made mathematically consistent (and valid for any energy and scattering angle), it does not provide any relation to the dynamical specification of the studied system (such as potential). In other words, the works presented in the previous paragraph do not provide any equivalent of \Eq{el eik app de} and are thus unable to answer the question what is the scattering amplitude $F(t)$ for a given potential $V(x, y, z)$.
 
