--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -20,7 +20,7 @@ As much as the model predictions differ for the elastic cross-section, they diff
 \fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross-section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the tripled outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
 
 
-\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}), which is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very low angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger elongations from the beam) and can be approached very close to the beam (to detect protons with small elongations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is crucial for the total cross-section measurement.
+\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}), which is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very small angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger deviations from the beam) and can be approached very close to the beam (to detect protons with small deviations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is crucial for the total cross-section measurement.
 
 
 
